--- a/MenekuljMAUI/MenekuljMAUI.csproj
+++ b/MenekuljMAUI/MenekuljMAUI.csproj
@@ -10,7 +10,7 @@
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
-
+		<Nullable>enable</Nullable>
 		<!-- Display name -->
 		<ApplicationTitle>MenekuljMAUI</ApplicationTitle>
 
@@ -54,6 +54,13 @@
 	  <None Remove="Images\mine.png" />
 	  <None Remove="Images\pauseIcon.png" />
 	  <None Remove="Images\player.png" />
+	  <None Remove="saves\TextFile1.txt" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Content Include="saves\TextFile1.txt">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Content>
 	</ItemGroup>
 
 	<ItemGroup>
@@ -84,7 +91,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="saves\" />
+	  <PackageReference Include="ELTE.EVA.SARuleSet" Version="2.0.0">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
 	</ItemGroup>
 
 </Project>
